# mcp-db-servers

./: .gitignore  Bsbd.py  README.md  Snow  Uyyb  Yuu  ddd  dia.py  example.db  excel.py  filemcp  init_db.py  jenkins.py  mcp_dia.py  mq.py  mqNode  pyproject.toml  server.py  server_oracle.py
.github/: copilot-instructions.md
java-db-server/: README.md  pom.xml
java-db-server/src/main/java/com/example/: McpDbServer.java
