[project]
name = "mcp-db-server"
version = "0.1.0"
description = "MCP server for database operations and Excel analysis"
dependencies = [
    "mcp[cli]",
    "oracledb",
    "pandas",
    "openpyxl",
    "matplotlib",
    "seaborn",
    "requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"